fix material ingredient image flickering

--- a/application/src/main/resources/nl/jixxed/eliteodysseymaterials/style/style.css
+++ b/application/src/main/resources/nl/jixxed/eliteodysseymaterials/style/style.css
@@ -898,6 +898,8 @@
 }
 
 .ingredient-image {
+    -fx-min-width: 2em;
+    -fx-min-height: 2em;
     -fx-max-width: 2em;
     -fx-max-height: 2em;
     -fx-fit-to-height: true;
